...
      return;
    }
    setPage(page + 1);
    fetchRankUsers();
  };
  return (
    <View style={styles.container} testID='rankUserScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={rankUserList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
